Completed tests, migrated tables, implemented logout
Completed first three user authentication tests
Removed newsletter constraint on users table
implemented logout functionality

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -4,16 +4,27 @@
   <%= devise_error_messages! %>
 
   <div class="field">
+    <p><%= f.label :first_name, "First Name" %><br />
+    <%= f.text_field :first_name %></p>
+
+    <p><%= f.label :last_name, "Last Name" %><br />
+    <%= f.text_field :last_name %></p>
+
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true %>
+
+    <p><%= f.label :username %><br />
+    <%= f.text_field :username %></p>
   </div>
+
+
 
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
 
   <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
+    <%= f.label :password, "Enter Password" %> <i>(leave blank if you don't want to change it)</i><br />
     <%= f.password_field :password, autocomplete: "off" %>
     <% if @minimum_password_length %>
       <br />
@@ -22,12 +33,12 @@
   </div>
 
   <div class="field">
-    <%= f.label :password_confirmation %><br />
+    <%= f.label :password_confirmation, "Confirm Password" %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
 
   <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
+    <%= f.label :current_password, "Current Password" %> <i>(we need your current password to confirm your changes)</i><br />
     <%= f.password_field :current_password, autocomplete: "off" %>
   </div>
 
