--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,24 +5,43 @@
 
   <div class="field">
     <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+    <%= f.email_field :email %>
+
+    <p><%= f.label :username, "Username" %><br />
+    <%= f.text_field :username, id:"Username" %></p>
+
+  </div>
+
+  <div class="field" >
+    <%= f.label :first_name, "First Name" %><br />
+    <%= f.text_field :first_name, id:"First Name" %>
   </div>
 
   <div class="field">
-    <%= f.label :password %>
+    <%= f.label :last_name, "Last Name" %><br />
+    <%= f.text_field :last_name, id:"Last Name" %>
+  </div>
+
+  <div class="field">
+    <%= f.label :password, "Enter Password" %>
     <% if @minimum_password_length %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
     <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
+    <%= f.password_field :password, autocomplete: "off", id:"Enter Password" %>
   </div>
 
   <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
+    <%= f.label :password_confirmation, "Confirm Password" %><br />
+    <%= f.password_field :password_confirmation, autocomplete: "off", id:"Confirm Password" %>
+  </div>
+
+  <div class="field">
+    <%= f.label :newsletter, "Sign up for newsletter?" %><br />
+    <%= f.check_box :newsletter, id:"Sign up for newsletter?" %>
   </div>
 
   <div class="actions">
-    <%= f.submit "Sign up" %>
+    <%= f.submit "Submit", id:"Submit" %>
   </div>
 <% end %>
 
