--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Welcome to Cinephile!</h1>
-Your source for movie reviews
+Your source for movie reviews!
 
 <% @movies.each do |movie| %>
 <p><%= link_to movie.title, movie_path(movie) %></p>
