--- a/app/views/devise/menu/_registration_items.html.erb
+++ b/app/views/devise/menu/_registration_items.html.erb
@@ -1,5 +1,8 @@
 <% if user_signed_in? %>
   <li>
+  <%= link_to('Add New Movie', new_movie_path) %>
+  </li>
+  <li>
   <%= link_to('Edit registration', edit_user_registration_path) %>
   </li>
 <% else %>
