fixed show index test

--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -6,3 +6,4 @@
 <p><%= @movie.cast %></p>
 <p><%= @movie.screen_writer %></p>
 <p><%= @movie.director %></p>
+<p><%= link_to "Back to Index", movies_path %></p>
