--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -6,4 +6,6 @@
 <p><%= @movie.cast %></p>
 <p><%= @movie.screen_writer %></p>
 <p><%= @movie.director %></p>
+<p><%= link_to "Edit", edit_movie_path(@movie) %></p>
+<p><%= link_to "Delete", movie_path(@movie), method: :delete %></p>
 <p><%= link_to "Back to Index", movies_path %></p>
