update create_reviews branch

--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -7,3 +7,5 @@
 <p><%= @movie.screen_writer %></p>
 <p><%= @movie.director %></p>
 <p><%= link_to "Back to Index", movies_path %></p>
+
+<%= render "./reviews/review_form" %>
