create reviews update

--- a/app/views/reviews/_review_form.html.erb
+++ b/app/views/reviews/_review_form.html.erb
@@ -5,6 +5,7 @@
   <%= f.label(:body, "Body here") %>
   <%= f.text_field(:body) %>
   <%= f.label(:rating, "Rating") %>
-  <%= select_tag(:rating, options_for_select(@ratings)) %>
+  <%= f.select(:rating, options_for_select(@ratings)) %>
+
   <%= f.submit("Submit Review") %>
 <% end %>
