--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -8,4 +8,14 @@
 <p><%= @movie.director %></p>
 <p><%= link_to "Back to Index", movies_path %></p>
 
+<% unless @reviews.nil? %>
+  <% @reviews.each do |review| %>
+    <p>
+      <%= review.title %>
+      <%= review.rating %>
+      <%= review.body %>
+    </p>
+  <% end %>
+<% end %>
+
 <%= render "./reviews/review_form" %>
