read, create, destroy reviews features

--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -9,3 +9,17 @@
 <p><%= link_to "Edit", edit_movie_path(@movie) %></p>
 <p><%= link_to "Delete", movie_path(@movie), method: :delete %></p>
 <p><%= link_to "Back to Index", movies_path %></p>
+
+<h3>Write Review</h3>
+
+<%= render 'review_form' %>
+
+<% @reviews.each do |review| %>
+<%= review.title %>
+<%= review.body %>
+<%= review.rating %>
+  <% if @user.id == review.user_id %>
+    <%= link_to "Edit Review", edit_movie_review_path(review) %>
+    <%= link_to "Delete Review", movie_review_path(review), method: :delete %>
+  <% end %>
+<% end %>
