--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -21,7 +21,7 @@
     <%= review.body %>
     <%= review.rating %>
       <% if @user.id == review.user_id %>
-        <%= link_to "Edit Review", edit_movie_review_path(review) %>
+        <%= link_to "Edit Review", edit_movie_review_path(@movie, review) %>
         <%= link_to "Delete Review", movie_review_path(review), method: :delete %>
       <% end %>
     <% end %>
