--- a/app/views/devise/menu/_registration_items.html.erb
+++ b/app/views/devise/menu/_registration_items.html.erb
@@ -5,6 +5,11 @@
   <li>
   <%= link_to('Edit registration', edit_user_registration_path) %>
   </li>
+  <% if current_user.admin %>
+  <li>
+    <%= link_to("All Users", users_path) %>
+  </li>
+  <% end %>
 <% else %>
   <li>
   <%= link_to('Sign Up', new_user_registration_path)  %>
