--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,6 +1,10 @@
 <h1>Welcome to Cinephile!</h1>
 Your source for movie reviews!
 
+<p>React:</p>
+<div id="app"></div>
+
+</p>Non-React:</p>
 <% @movies.each do |movie| %>
 <p><%= link_to movie.title, movie_path(movie) %></p>
 <% end %>
