--- a/app/views/devise/menu/_registration_items.html.erb
+++ b/app/views/devise/menu/_registration_items.html.erb
@@ -1,17 +1,9 @@
 <% if user_signed_in? %>
-  <li>
-  <%= link_to('Add New Movie', new_movie_path) %>
-  </li>
-  <li>
+  <%= link_to('Add New Movie', new_movie_path) %> |
   <%= link_to('Edit registration', edit_user_registration_path) %>
-  </li>
   <% if current_user.admin %>
-  <li>
-    <%= link_to("All Users", users_path) %>
-  </li>
+    | <%= link_to("All Users", users_path) %>
   <% end %>
 <% else %>
-  <li>
-  <%= link_to('Sign Up', new_user_registration_path)  %>
-  </li>
+  | <%= link_to('Sign Up', new_user_registration_path)  %>
 <% end %>
