--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -15,6 +15,10 @@
 
     <p><%= f.label :username %><br />
     <%= f.text_field :username %></p>
+
+    <%= f.label :image, "Edit Avatar" %><br />
+    <%= f.file_field :image %>
+
   </div>
 
 
