--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <h2>Sign up</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name), multipart: true) do |f| %>
   <%= devise_error_messages! %>
 
   <div class="field">
@@ -20,6 +20,11 @@
   <div class="field">
     <%= f.label :last_name, "Last Name" %><br />
     <%= f.text_field :last_name, id:"Last Name" %>
+  </div>
+
+  <div class="field">
+    <%= f.label :image, "Add Avatar" %><br />
+    <%= f.file_field :image, id: "Add Avatar" %>
   </div>
 
   <div class="field">
