--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,11 +1,6 @@
-<h1>Welcome to Cinephile!</h1>
-Your source for movie reviews!
-
-<% @movies.each_with_index do |movie, index| %>
-<p><%= link_to movie.title, movie_path(movie) %></p>
-<% unless current_user.nil? %>
-<% if current_user.admin %>
-  <p><%= link_to "Delete Movie", movie_path(movie), method: :delete, id: "delete #{index + 1}" %></p>
-<% end %>
-<% end %>
+<% if params[:search].nil? %>
+  <%= render "indexform" %>
+  <%= render "searchform" %>
+<% else %>
+  <%= render "searchresult" %>
 <% end %>
