--- a/views/movies/_form.html.erb
+++ b/views/movies/_form.html.erb
@@ -20,8 +20,8 @@
     <%= q.text_field :genre %>
   </div>
   <div class="field">
-    <%= q.label :cast_member, "Cast Member" %><br>
-    <%= q.text_field :cast_member %>
+    <%= q.label :cast %><br>
+    <%= q.text_field :cast %>
   </div>
   <div class="field">
     <%= q.label :director %><br>
