--- a/views/movies/show.html.erb
+++ b/views/movies/show.html.erb
@@ -3,7 +3,7 @@
 <p><%= @movie.year %></p>
 <p><%= @movie.rating %></p>
 <p><%= @movie.genre %></p>
-<p><%= @movie.cast_member %></p>
+<p><%= @movie.cast %></p>
 <p><%= @movie.screen_writer %></p>
 <p><%= @movie.director %></p>
 <% if current_user.admin %>
