updated user show page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<p><%= image_tag @user.image_url.to_s %></p>
+<p><%= image_tag @user.image %></p>
 <p><%= @user.first_name %>
 <%= @user.last_name %></p>
 <p><%= @user.username %></p>
