--- a/app/views/user_mailer/notice.html.erb
+++ b/app/views/user_mailer/notice.html.erb
@@ -1,5 +1,8 @@
-<h1>User#notice</h1>
+<h1>Movie Review Notice</h1>
 
 <p>
-  <%= @greeting %>, find me in app/views/user_mailer/notice.html.erb
+  <%= @greeting %>
+</p>
+<p>
+  <%= @user %>
 </p>
