--- a/app/views/devise/menu/_registration_items.html.erb
+++ b/app/views/devise/menu/_registration_items.html.erb
@@ -5,5 +5,5 @@
     | <%= link_to("All Users", users_path) %>
   <% end %>
 <% else %>
-  | <%= link_to('Sign Up', new_user_registration_path)  %>
+  <%= link_to('Sign Up', new_user_registration_path)  %>
 <% end %>
