--- a/app/views/devise/menu/_registration_items.html.erb
+++ b/app/views/devise/menu/_registration_items.html.erb
@@ -1,6 +1,6 @@
 <% if user_signed_in? %>
   <%= link_to('Add New Movie', new_movie_path) %> |
-  <%= link_to('Edit registration', edit_user_registration_path) %>
+  <%= link_to('My Profile', user_path(current_user.id)) %>
   <% if current_user.admin %>
     | <%= link_to("All Users", users_path) %>
   <% end %>
