Implemented React-based movies index page

--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,6 +1,7 @@
 <% if params[:search].nil?%>
-  <%= render "indexform" %>
   <%= render "searchform" %>
 <% else %>
   <%= render "searchresult" %>
 <% end %>
+
+<div id="app"></div>
