added user's movies and user's reviews to user show page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,3 +3,11 @@
 <%= @user.last_name %></p>
 <p><%= @user.username %></p>
 <p><%= @user.email %></p>
+
+<% @user_movies.each do |movie| %>
+  <%= link_to movie.title, movie_path(movie) %>
+<% end %>
+
+<% @user_reviews.each do |review| %>
+  <%= link_to review.title, movie_path(review.movie) %>
+<% end %>
