--- a/app/views/devise/menu/_registration_items.html.erb
+++ b/app/views/devise/menu/_registration_items.html.erb
@@ -1,9 +1,10 @@
 <% if user_signed_in? %>
+  <%= link_to('Home', root_path) %> |
   <%= link_to('Add New Movie', new_movie_path) %> |
   <%= link_to('Edit registration', edit_user_registration_path) %>
   <% if current_user.admin %>
     | <%= link_to("All Users", users_path) %>
   <% end %>
 <% else %>
-  | <%= link_to('Sign Up', new_user_registration_path)  %>
+  <%= link_to('Sign Up', new_user_registration_path)  %>
 <% end %>
