finished all user show page features

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,3 +11,5 @@
 <% @user_reviews.each do |review| %>
   <%= link_to review.title, movie_path(review.movie) %>
 <% end %>
+
+<p><%= link_to('Edit Registration', edit_user_registration_path) %></p> 
