--- a/app/views/devise/menu/_registration_items.html.erb
+++ b/app/views/devise/menu/_registration_items.html.erb
@@ -1,4 +1,5 @@
 <% if user_signed_in? %>
+  <%= link_to('Home', root_path) %> |
   <%= link_to('Add New Movie', new_movie_path) %> |
   <%= link_to('My Profile', user_path(current_user.id)) %>
   <% if current_user.admin %>
