--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,10 +7,16 @@
   <%= link_to('Edit profile', edit_user_registration_path) %>
 <% end %>
 
-<% @user_movies.each do |movie| %>
-  <%= link_to movie.title, movie_path(movie) %>
-<% end %>
+<p>My Movies</p>
+<ul>  
+  <% @user_movies.each do |movie| %>
+    <li><%= link_to movie.title, movie_path(movie) %></li>
+  <% end %>
+</ul>
 
-<% @user_reviews.each do |review| %>
-  <%= link_to review.title, movie_path(review.movie) %>
-<% end %>
+<p>My Reviews</p>
+<ul>
+  <% @user_reviews.each do |review| %>
+    <li><%= link_to review.title, movie_path(review.movie) %></li>
+  <% end %>
+</ul>
