--- a/app/views/movies/_form.html.erb
+++ b/app/views/movies/_form.html.erb
@@ -4,6 +4,18 @@
     <%= q.text_field :title %>
   </div>
   <div class="field">
+    <%= q.label :director %><br>
+    <%= q.text_field :director %>
+  </div>
+  <div class="field">
+    <%= q.label :screen_writer, "Screen Writer" %><br>
+    <%= q.text_field :screen_writer %>
+  </div>
+  <div class="field">
+    <%= q.label :cast_member, "Cast Member" %><br>
+    <%= q.text_field :cast_member %>
+  </div>
+  <div class="field">
     <%= q.label :studio %><br>
     <%= q.text_field :studio %>
   </div>
@@ -20,16 +32,8 @@
     <%= q.text_field :genre %>
   </div>
   <div class="field">
-    <%= q.label :cast_member, "Cast Member" %><br>
-    <%= q.text_field :cast_member %>
-  </div>
-  <div class="field">
-    <%= q.label :director %><br>
-    <%= q.text_field :director %>
-  </div>
-  <div class="field">
-    <%= q.label :screen_writer, "Screen Writer" %><br>
-    <%= q.text_field :screen_writer %>
+    <%= f.label :poster, "Add Poster" %><br />
+    <%= f.file_field :poster %>
   </div>
   <div class="actions">
     <%= q.submit "Submit" %>
