--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,11 +1,12 @@
+<p><%= image_tag @movie.poster_url.to_s %></p>
 <p><%= @movie.title %></p>
+<p><%= @movie.director %></p>
+<p><%= @movie.screen_writer %></p>
+<p><%= @movie.cast_member %></p>
 <p><%= @movie.studio %></p>
 <p><%= @movie.year %></p>
 <p><%= @movie.rating %></p>
 <p><%= @movie.genre %></p>
-<p><%= @movie.cast_member %></p>
-<p><%= @movie.screen_writer %></p>
-<p><%= @movie.director %></p>
 <% if current_user.admin %>
 <p><%= link_to "Edit", edit_movie_path(@movie) %></p>
 <p><%= link_to "Delete Movie", movie_path(@movie), method: :delete, id: "delete movie" %></p>
