re-factored test

--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,4 +1,4 @@
-<p><%= image_tag @movie.poster_url.to_s %></p>
+<p><%= image_tag @movie.poster %></p>
 <p><%= @movie.title %></p>
 <p><%= @movie.director %></p>
 <p><%= @movie.screen_writer %></p>
