--- a/app/views/movies/_indexform.html.erb
+++ b/app/views/movies/_indexform.html.erb
@@ -1,11 +1,13 @@
 <h1>Welcome to Cinephile!</h1>
-Your source for movie reviews!
+<p>Your source for movie reviews!</p>
 
-<% @movies.each_with_index do |movie, index| %>
-<p><%= link_to movie.title, movie_path(movie) %></p>
-<% unless current_user.nil? %>
-<% if current_user.admin %>
-  <p><%= link_to "Delete Movie", movie_path(movie), method: :delete, id: "delete #{index + 1}" %></p>
-<% end %>
-<% end %>
-<% end %>
+<div class="erb-display">
+  <% @movies.each_with_index do |movie, index| %>
+  <p><%= link_to movie.title, movie_path(movie) %></p>
+  <% unless current_user.nil? %>
+  <% if current_user.admin %>
+    <p><%= link_to "Delete Movie", movie_path(movie), method: :delete, id: "delete #{index + 1}" %></p>
+  <% end %>
+  <% end %>
+  <% end %>
+</div>
