--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,6 +1,6 @@
 <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }, multipart: true) do |f| %>
   <%= devise_error_messages! %>
 
   <div class="field">
@@ -18,7 +18,6 @@
 
     <%= f.label :image, "Edit Avatar" %><br />
     <%= f.file_field :image %>
-
   </div>
 
 
