--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,10 @@
     <%= csrf_meta_tags %>
     <%= javascript_include_tag 'application' %>
     <%= stylesheet_link_tag    'application', media: 'all' %>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.2.3/foundation.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.2.3/foundation.min.js">
+
+    </script>
 
     <header class="header">
   <h1 class="headline"><h1>Welcome to Cinephile</h1>
@@ -35,7 +39,7 @@
   </head>
   <body>
       <div class="row collapse expanded">
-      	<div class="small-12 medium-12 large-12 columns">
+      	<div class="small-12 medium-12 large-12 columns banner">
       		<div class="orbit" role="region" aria-label="Favorite Space Pictures" data-orbit>
       		  <ul class="orbit-container">
                   <button class="orbit-previous"><span class="show-for-sr">Previous Slide</span>&#9664;&#xFE0E;</button>
