--- a/app/views/reviews/_review_form.html.erb
+++ b/app/views/reviews/_review_form.html.erb
@@ -1,4 +1,4 @@
-<!-- <h3>Write Review</h3> -->
+<h3>Write Review</h3>
 <%= form_for [@movie, @review] do |f| %>
   <%= f.label(:title, "Review Title") %>
   <%= f.text_field(:title) %>
