--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,9 +1,11 @@
-<% if params[:search].nil?%>
-  <%= render "indexform" %>
+<div id="index">
+  <% if params[:search].nil?%>
   <%= render "searchform" %>
+  <%= render "indexform" %>
 <% else %>
   <%= render "searchresult" %>
 
 <% end %>
+</div>
 
 <div id="app"></div>
