--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,61 +14,36 @@
 
   </head>
   <body>
-    <header class="header">
-      <h1 class="headline"><h1>Welcome to Cinephile</h1>
-      <h3>Your source for movie reviews</h3>
-      <ul class="header-subnav">
-        <% if user_signed_in? %>
-        <li> <%= link_to('Sign Out', destroy_user_session_path, method: :delete) %></li>
-        <% else %>
-        <li><%= link_to('Sign In', new_user_session_path)  %></li>
-        <% end %>
-        <% if user_signed_in? %>
-        <li><%= link_to('Home', root_path) %> </li>
-        <li><%= link_to('Add New Movie', new_movie_path) %> </li>
-        <li><%= link_to('My Profile', user_path(current_user.id)) %></li>
-        <% if current_user.admin %>
-        <li> <%= link_to("All Users", users_path) %></li>
-        <% end %>
-        <span>Logged in as <%= current_user.username %> <%= image_tag current_user.image %> </span>
-        <% else %>
-        <li><%= link_to('Sign Up', new_user_registration_path)  %></li>
-        <% end %>
-      </ul>
-    </header>
-      <div class="row collapse expanded">
-      	<div class="small-12 medium-12 large-12 columns banner">
-      		<div class="orbit" role="region" aria-label="Favorite Space Pictures" data-orbit>
-      		  <ul class="orbit-container">
-                  <button class="orbit-previous"><span class="show-for-sr">Previous Slide</span>&#9664;&#xFE0E;</button>
-          <button class="orbit-next"><span class="show-for-sr">Next Slide</span>&#9654;&#xFE0E;</button>
-      		    <li class="orbit-slide">
-      		    	<img class="orbit-image" src="http://wfiles.brothersoft.com/a/avengers_movie_poster_65413-1600x1200.jpg" alt="Space">
-      		    </li>
-              <li class="orbit-slide">
-      		    	<img class="orbit-image" src="http://img.wallpaperfolder.com/f/4E7364360352/fonds-39-cran-kill-bill-tous.jpg" alt="Space">
-      		    </li>
-              <li class="orbit-slide">
-      		    	<img class="orbit-image" src="http://cdn.pcwallart.com/images/avatar-poster-wallpaper-3.jpg" alt="Space">
-      		    </li>
-        </ul>
-      		  <nav class="orbit-bullets">
-      		    <button data-slide="0"><span class="show-for-sr">First slide details.</span></button>
-      		    <button data-slide="1"><span class="show-for-sr">Second slide details.</span></button>
-      		    <button data-slide="2"><span class="show-for-sr">Third slide details.</span></button>
-      		    <button data-slide="3"><span class="show-for-sr">Fourth slide details.</span></button>
-      		  </nav>
-      		</div>
-      	</div>
-      </div>
+    <div id="main">
+      <header class="header">
+        <div class="header-subnav row">
+          <div class="leftnav">
+          <% if user_signed_in? %>
+          <div class="navbaritems" ><%= link_to('Home', root_path) %> </div>
+          <div class="navbaritems" ><%= link_to('Add New Movie', new_movie_path) %> </div>
+          <div class="navbaritems" ><%= link_to('My Profile', user_path(current_user.id)) %></div>
+          <% if current_user.admin %>
+          <div class="navbaritems" > <%= link_to("All Users", users_path) %></div>
+          <% end %>
+          </div>
+          <div class="rightnav">
+          <div class="navbaritems" >Logged in as <%= current_user.username %> <%= image_tag current_user.image %> </div>
+          <% else %>
+          <div class="navbaritems" ><%= link_to('Sign Up', new_user_registration_path)  %></div>
+          <% end %>
+          <% if user_signed_in? %>
+          <div class="navbaritems" > <%= link_to('Sign Out', destroy_user_session_path, method: :delete) %></div>
+          <% else %>
+          <div class="navbaritems" ><%= link_to('Sign In', new_user_session_path)  %></div>
+          <% end %>
+          </div>
+        </div>
+      </header>
+      <h1 class="header">Cinephile</h1>
+      <p class="notice flash"><%= notice %></p>
+      <p class="alert flash"><%= alert %></p>
 
-
-
-    </ul>
-
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
-
-    <%= yield %>
+      <%= yield %>
+    </div>
   </body>
 </html>
