--- a/app/views/movies/_searchform.html.erb
+++ b/app/views/movies/_searchform.html.erb
@@ -1,4 +1,6 @@
-<%= form_tag(movies_path, :method => "get", id: "search-form") do %>
+<div id="search">
+  <%= form_tag(movies_path, :method => "get", id: "search-form") do %>
     <%= text_field_tag :search, params[:search], placeholder: "Search Movies" %>
     <%= submit_tag "Search", :name => nil %>
-<% end %>
+  <% end %>
+</div>
