--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -43,12 +43,12 @@
         <% end %>
 
         <div class="votes">
-          <span id="upvote">
+          <span id="upvote_span">
             <span class="vote-component"><%= button_to "Upvote",  upvote_review_votes_path(review), method: :post, class: 'Upvote', id: "Upvote_#{review.id}" %></span>
             <span class="vote-component vote-number" id = <%="Upvote-sum_#{review.id}" %>> <%= upvotes %> </span>
           </span>
 
-          <span id="downvote">
+          <span id="downvote_span">
             <span class="vote-component"><%= button_to "Downvote", downvote_review_votes_path(review), method: :post, class: 'Downvote', id: "Downvote_#{review.id}" %></span>
             <span class="vote-component vote-number" id = <%="Downvote-sum_#{review.id}" %>> <%= downvotes %> </span>
           </span>
