--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,21 +6,23 @@
     <p class="user-text"><%= @user.username %></p>
     <p class="user-text"><%= @user.email %></p>
     <% if @user.id == current_user.id %>
-      <%= link_to('Edit Profile', edit_user_registration_path) %>
+      <p class="user-text"><%= link_to('Edit Profile', edit_user_registration_path) %></p>
     <% end %>
   </div>
 
-  <p>My Movies</p>
-  <ul>
-    <% @user_movies.each do |movie| %>
-      <li><%= link_to movie.title, movie_path(movie) %></li>
-    <% end %>
-  </ul>
+  <div class="user-reviews">
+    <p>My Movies</p>
+    <ul>
+      <% @user_movies.each do |movie| %>
+        <li><%= link_to movie.title, movie_path(movie) %></li>
+      <% end %>
+    </ul>
 
-  <p>My Reviews</p>
-  <ul>
-    <% @user_reviews.each do |review| %>
-      <li><%= link_to review.title, movie_path(review.movie) %></li>
-    <% end %>
-  </ul>
+    <p>My Reviews</p>
+    <ul>
+      <% @user_reviews.each do |review| %>
+        <li><%= link_to review.title, movie_path(review.movie) %></li>
+      <% end %>
+    </ul>
+  </div>
 </div>
