--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,7 +5,7 @@
         <p><%= link_to user.username, user_path(user) %></br>
         <%= user.first_name %>
         <%= user.last_name %></br>
-        <%= link_to "Delete User", user_path(user), method: :delete, id: "delete #{index + 1}" %></br></p>
+        <%= link_to "Delete User", archive_user_path(user), method: :post, id: "delete #{index + 1}" %></br></p>
       <% end %>
     <% end %>
   <% end %>
