--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,10 @@
-<div class="user-show-page">
-  <div class="user-show">
+<div class="user-show-page row">
+  <div class="user-show small-4 columns">
     <p class="user-image"><%= image_tag @user.image %></p>
-    <p class="user-text"><%= @user.first_name %>
-    <%= @user.last_name %></p>
+  </div>
+
+  <div class="small-4 columns">
+    <p class="user-text"><%= @user.first_name %> <%= @user.last_name %></p>
     <p class="user-text"><%= @user.username %></p>
     <p class="user-text"><%= @user.email %></p>
     <% if @user.id == current_user.id %>
@@ -10,15 +12,15 @@
     <% end %>
   </div>
 
-  <div class="user-reviews">
-    <p>My Movies</p>
+  <div class="user-reviews small-4 columns">
+    <p class="row">My Movies</p>
     <ul>
       <% @user_movies.each do |movie| %>
         <li><%= link_to movie.title, movie_path(movie) %></li>
       <% end %>
     </ul>
 
-    <p>My Reviews</p>
+    <p class="row">My Reviews</p>
     <ul>
       <% @user_reviews.each do |review| %>
         <li><%= link_to review.title, movie_path(review.movie) %></li>
